<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemApartments"
            android:icon="@drawable/ic_menu_apartments"
            android:title="@string/Apartments" />
        <item
            android:id="@+id/itemProfile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/itemSetting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/itemSign_off"
            android:icon="@drawable/ic_menu_signoff"
            android:title="@string/Sign_off" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/itemAbout"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/About" />
        </menu>
    </item>

</menu>
